# api_fs

./: .env  README.md  pyproject.toml
alembic/versions/: 31dee55b4c6e_add_new_models.py  dc5030ee7023_first_migration.py
app/: main.py
app/api/dependencies/: user.py
app/api/routers/: auth.py  users.py
app/crud/: user.py
app/models/: __init__.py  auth.py  user.py
app/schemas/: auth.py  user.py
