[tool.poetry]
name = "banking_system"
version = "0.1.0"
description = ""
authors = ["Antony2500 <toxa241ff@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = {extras = ["all"], version = "^0.115.0"}
sqlalchemy = "^2.0.35"
jwt = "^1.3.1"
alembic = "^1.13.3"
asyncpg = "^0.29.0"
passlib = "^1.7.4"
pyjwt = "^2.9.0"
bcrypt = "^4.2.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
