[tool.poetry]
name = "banking_system"
version = "0.1.0"
description = ""
authors = ["Antony2500 <toxa241ff@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = {extras = ["all"], version = "^0.115.0"}
sqlalchemy = "^2.0.35"
jwt = "^1.3.1"
alembic = "^1.13.3"
asyncpg = "^0.29.0"
passlib = "^1.7.4"
pyjwt = "^2.9.0"
bcrypt = "^4.2.0"
greenlet = "^3.1.1"
pytest = "^8.3.3"
pytest-postgresql = "^6.1.1"
psycopg-binary = "^3.2.3"
pytest-asyncio = "^0.24.0"
anyio = "^4.6.2.post1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.pytest.ini_options]
testpaths = "tests"
python_files = "test_*.py"
python_functions = "test_*"
python_classes = "Test* *Tests"
addopts = "-vv -x"
asyncio_mode = "auto"
pythonpath = ["."]